# urdf-yang

./: .gitmodules  CITATION.cff  README.md  about.md
_posts/: 2024-11-10-video.md
cable_description/: package.xml  setup.cfg  setup.py
cable_description/cable_description/: cable_descriptor.py
cable_description/urdf/: ethernet-cable.urdf.xacro  usb-cable.urdf.xacro
docs/: 404.html  _config.yml  about.md  index.html  index.md
docs/_posts/: 2024-11-10-devices.md  2024-11-10-example.md  2024-11-10-video.md  2024-11-11-publication.md  2024-11-11-tools.md  2024-11-11-yangmodules.md  index.md
example_config/: package.xml  setup.cfg  setup.py
example_config/config/: example_config_connections.sdf  rviz_config.rviz
marker_extension/: package.xml  setup.cfg  setup.py
marker_extension/marker_extension/: channels.txt  interactive_and_simple_marker.py  marker_connection.py
netconf-testing/: client.py  connect_srv.py  docker-compose.yaml  get_hostname.py
onrobot_description/: CMakeLists.txt  package.xml
system_description/: CMakeLists.txt  package.xml
urdf-yang-docs/: _config.yml
urdf_validator/: package.xml  setup.cfg  setup.py
yang-modules/: README.md  instance-data.xml  instance-data2.xml  yang_content.xml
yang_modules/: closed-loop-control@2023-10-13.yang  component-connections.yang  container.yang  layer1.yang  layer2.yang  network-topology.yang  network.yang  robot-control-loop.yang  robot-network-topology.yang  robot-network-topology@2023-04-20.yang  robot-network.yang  ros.yang
yang_tools/: system-library-data.json
(+142 files in other folders)
